Add end state for 08_02